--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@ table {
             right: 0;
             top: 35%;
             transform: translateY(-50%);
-            width: 50px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
             background: linear-gradient(145deg,#1A2980,#26D0CE);
             color: white;
             cursor: pointer;
@@ -284,11 +284,11 @@ table {
             border-bottom-right-radius: 30px;
             border-top-left-radius: 30px;
             border-bottom-left-radius: 30px;
+            opacity: 0.9;
         }
 
         .bar-content {
-            padding: 20px;
-            opacity: 0.2;
+            padding-top: 15px;
             transition: opacity 0.3s ease;
         }
 
@@ -297,7 +297,6 @@ table {
             font-family: monospace;
             font-weight: bold;
             font-size: larger;
-            margin-top: 10px;
             white-space: nowrap;
             text-align: center;
         }
@@ -388,7 +387,7 @@ table {
                   <li> February 20 Thursday, 2025 Physical Science </li>
                   <li> February 22 Saturday, 2025 Optional Elective </li>
               </ul>
-            <p>Holidays Maha Shivratri 26th Feb. Wednesday</p>
+            
         </div>
     </div>
 </div>
