--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@ table {
             text-wrap: wrap;
             font-family: monospace;
             font-size:12px;
-            margin-left: 10px;
-            margin-top: 85px;
+            margin-left: 30px;
+            margin-top: 65px;
             margin-right: 10px;
             text-align: left;
         }
@@ -378,14 +378,14 @@ table {
             
                 <ul>
                   <li> Madhyamik Time Table 2025 </li>
-                  <li> February 10 -Monday, 2025 First Language </li>
-                  <li> February 11 -Tuesday, 2025 Second Language </li>
-                  <li> February 15 Mathematics, 2025 Mathematics </li>
-                  <li> February 17 Monday, 2025 History </li>
-                  <li> February 18 Tuesday, 2025 Geography </li>
-                  <li> February 19 Wednesday, 2025 Life Science </li>
-                  <li> February 20 Thursday, 2025 Physical Science </li>
-                  <li> February 22 Saturday, 2025 Optional Elective </li>
+                  <li> February 10 Monday, First Language </li>
+                  <li> February 11 Tuesday,  Second Language </li>
+                  <li> February 15 Mathematics, Mathematics </li>
+                  <li> February 17 Monday,  History </li>
+                  <li> February 18 Tuesday,  Geography </li>
+                  <li> February 19 Wednesday,  Life Science </li>
+                  <li> February 20 Thursday,  Physical Science </li>
+                  <li> February 22 Saturday,  Optional Elective </li>
               </ul>
             
         </div>
