--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ table {
     <button class="HS" role="button" onclick="hsxiExam()">HS &amp; XI Exam</button>
     <button class="ITAX" role="button" onclick="itaxPage()">I.Tax</button>
     <button class="calc" role="button" onclick="calcPage()">Co-operative Loan Calc.</button>
-    <div class="fb-page" data-href="https://www.facebook.com/prime.maths" data-tabs="" data-width="270px" data-height="300" data-small-header="true" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/prime.maths" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/prime.maths">Prime Maths</a></blockquote></div>
+    <div class="fb-page" data-href="https://www.facebook.com/prime.maths" data-tabs="" data-width="" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/prime.maths" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/prime.maths">Prime Maths</a></blockquote></div>
     <p id="holiday-list-time" style="display: none;"></p>
     <p id="holiday-list" style="display: none;"></p>
     <p id="exam-list" style="display: none;"></p>
