--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6701104685381436"
      crossorigin="anonymous"></script>
+  <meta name="google-adsense-account" content="ca-pub-6701104685381436">
   <hr>
   <h3 id="h3"></h3>
   <h5 id="h5"></h5>
